--- a/.github/workflows/flutter-ci-android.yml
+++ b/.github/workflows/flutter-ci-android.yml
@@ -1,4 +1,4 @@
-name: Full Flutter CI
+name: Android Flutter CI
 
 on:
   workflow_dispatch:
@@ -19,6 +19,6 @@ on:
 
 jobs:
   run-ci:
-    uses: ./.github/workflows/flutter-build.yml
+    uses: ./.github/workflows/flutter-build-android.yml
     with:
       upload-artifact: true
